# sandopolis

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  AI_USAGE_POLICY.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  audio-worklet.js  build.zig  build.zig.zon  file.txt  flake.nix  index.html  mkdocs.yml  probe_boot.zig  pyproject.toml  sandopolis.js  sandopolis_input.example.cfg  sitemap.xml  test_emu.zig
api-reference/: index.html
compatibility/: index.html
development/: index.html
docs/: api-reference.md  compatibility.md  core-api.md  development.md  examples.md  getting-started.md  index.md
getting-started/: index.html
search/: search_index.json
src/: api.zig  audio_output.zig  audio_timing.zig  cli.zig  clock.zig  config_path.zig  frame_scheduler.zig  input_mapping.zig  io.zig  lib.zig  libretro.zig  machine.zig  main.zig  memory.zig  performance_profile.zig  platform.zig  psg.zig  regression_tests.zig  rom_loader.zig  rom_metadata.zig  rom_paths.zig  state_file.zig  system.zig  system_machine.zig  test_exports.zig  testing_root.zig  unified_config.zig  unit_test_root.zig  unit_tests.zig  vdp.zig  wasm.zig  wasm_stubs.c  z80.zig
tests/: README.md  integration_tests.zig  property_tests.zig  regression_tests.zig
tools/: compare_ym.zig  compare_ym_unavailable.zig  dump_audio.zig  dump_frames.zig  pal_accuracy_check.py  stall_diff.zig  trace_diff.zig  trace_irq_storm.zig  trace_m68k_failure.zig  trace_overdrive_crash.zig  trace_sound_boot.zig  trace_ym_writes.zig  (+2 more)
(+104 files in other folders)
