[project]
name = "sandopolis"
version = "0.1.0"
description = "The Python environment for the Sandopolis project"

requires-python = ">=3.10,<4.0"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.12,<10.0.0)",
    "mkdocstrings-python (>=1.16.10,<2.0.0)",
    "pyyaml (>=6.0.1,<7.0.0)",
]
